refs #cursor - hw11. fixes